# physics-sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tree.txt
inc/ui/: IExposable.h  IFont.h  IFontRenderer.h  IIcon.h  IInputEvent.h  IInputTranslator.h  IRenderer.h  IResourceLoader.h  IShader.h  ITexture.h  NanoVGFontRenderer.h  NanoVGRenderer.h  NanoVGResourceLoader.h  NanoVGTexture.h  SDLInputTranslator.h  UIBoxLayout.h  UIButton.h  UICanvas.h  UICheckBox.h  UIConstraintLayout.h  UIDecorator.h  UIDialog.h  UIDockable.h  UIElement.h  UIEventBus.h  UIFacade.h  UIFactory.h  UIFullLayout.h  UIGridLayout.h  UIImage.h  UILabel.h  UILayout.h  UILinearLayout.h  UIManager.h  UINormalWindow.h  UIObserver.h  UIPropertyDescription.h  UIPropertyPane.h  UIRadioButton.h  UIRadioButtonGroup.h  (+9 more)
scripts/linux/: clean.sh  compile_shaders.sh  create-executable.sh  create-project-dir.sh  create-shared-lib.sh  create-static-lib.sh  run-tests.sh  setup-env.sh
scripts/win/: clean.bat  compile_shaders.bat  create_executable.bat  create_project_dir.bat  create_shared_lib.bat  create_static_lib.bat  run_tests.bat  setup_env.bat
src/: main.cpp
src/ui/: NanoVGFontRenderer.cpp  NanoVGRenderer.cpp  NanoVGResourceLoader.cpp  SDLInputTranslator.cpp  UIBoxLayout.cpp  UIButton.cpp  UICanvas.cpp  UICheckBox.cpp  UIConstraintLayout.cpp  UIDecorator.cpp  UIDialog.cpp  UIDockable.cpp  UIElement.cpp  UIEventBus.cpp  UIFacade.cpp  UIFactory.cpp  UIFullLayout.cpp  UIGridLayout.cpp  UIImage.cpp  UILabel.cpp  UILinearLayout.cpp  UIManager.cpp  UINormalWindow.cpp  UIPropertyDescription.cpp  UIPropertyPane.cpp  UIRadioButton.cpp  UIRadioButtonGroup.cpp  UIResourceManager.cpp  UIScrollbar.cpp  UISlider.cpp  UIStyle.cpp  UITextField.cpp  UITheme.cpp  UIToolbar.cpp  UITooltip.cpp  UIXYLayout.cpp
